<?xml version="1.0" encoding="utf-8"?>
<android.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fakejoker.livebettinggoal.Guidelines">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/vipbg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/rules1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#000"
                    android:text="@string/rules1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/rules2"
                    android:layout_width="match_parent"
                    android:textColor="#1919ff"
                    android:layout_height="match_parent"
                    android:text="@string/rules2" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/rules_followed"
                    android:layout_width="match_parent"
                    android:textColor="#FF0000"
                    android:layout_height="match_parent"
                    android:text="@string/rules_followed" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/rules3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#4c4cff"
                    android:text="@string/rules3" />

            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:layout_height="match_parent"
                android:text="@string/summary" />

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/plans"
                    android:layout_width="match_parent"
                    android:textColor="#000"
                    android:layout_height="match_parent"
                    android:text="@string/plans" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/rules4"
                    android:layout_width="match_parent"
                    android:textColor="#FF0000"
                    android:layout_height="match_parent"
                    android:text="@string/rules4" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/notice"
                    android:layout_width="match_parent"
                    android:textColor="#000"
                    android:textSize="7sp"
                    android:gravity="center_horizontal"
                    android:layout_height="match_parent"
                    android:text="@string/notice" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.widget.FrameLayout>
