<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="1dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="6dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/watermark">

            <TextView
                android:id="@+id/result"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/tips"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <ImageView
                android:id="@+id/tick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_weight="1"
                android:minWidth="10dp"
                app:srcCompat="@android:drawable/checkbox_on_background"
                android:contentDescription="@string/tick" />

        </android.support.v7.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/date_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/result_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/GMT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:layout_gravity="bottom|center"
            android:text="@string/gmt"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

    </android.support.v7.widget.CardView>


    </RelativeLayout>
</LinearLayout>
