<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="1dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="1dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="3dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/watermark">

            <TextView
                android:id="@+id/tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/tips"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />


        </android.support.v7.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="72dp"
            android:layout_marginEnd="72dp"
            android:layout_gravity="bottom|end"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/GMT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="22dp"
            android:layout_marginEnd="22dp"
            android:layout_gravity="bottom|end"
            android:text="@string/gmt"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

    </android.support.v7.widget.CardView>
</LinearLayout>
