<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#00ffffff"
        android:weightSum="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/rate"
            android:textColor="@color/textcolor_white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RatingBar
        android:id="@+id/rate_us"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        android:numStars="5"
        android:rating="4.5"
        android:stepSize="0.5" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#00ffffff"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/btn_cancel"
            android:textColor="@color/textcolor_white" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:text="@string/btn_ok"
            android:textColor="@color/textcolor_white" />
    </LinearLayout>


</LinearLayout>
